# iso20022-rs

./: .drone.yml  Cargo.toml  README.md  build.rs
proto/: head.001.001.02.proto  pain.001.001.10.proto  pain.002.001.11.proto  pain.007.001.10.proto  pain.008.001.09.proto  pain.013.001.08.proto  pain.014.001.08.proto
schema/: head.001.001.02.xsd
src/: head_001_001_02.rs  lib.rs  pain_001_001_10.rs  pain_002_001_11.rs  pain_007_001_10.rs  pain_008_001_09.rs  pain_013_001_08.rs  pain_014_001_08.rs
