[package]
name = "iso20022"
version = "0.1.5"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/keithnoguchi/iso20022-rs"
homepage = "https://github.com/keithnoguchi/iso20022-rs"
documentation = "https://docs.rs/iso20022"
description = "ISO 20022 Universal Financial Industry Message Scheme in Rust"
keywords = ["financial", "iso20022", "protobuf"]
categories = ["encoding", "data-structures"]
readme = "README.md"
# Remove this line when you want to re-build the code.
build = false

[dependencies]
prost = "0.6"

[build-dependencies]
tonic-build = "0.1"
